--- a/fa2024/lectures/lecture-03.qmd
+++ b/fa2024/lectures/lecture-03.qmd
@@ -17,17 +17,25 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    'Homework 1 - Due Sunday night',
+    'Teams should be formed and submitted',
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    'Intro to ER Models',
+    'Entities and Attributes',
+    'Relationships and Cardinalty',
+    'Keys and Identifiers'
 ]
 ```
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 {{< include "./_template-lecture-gantt.qmd" >}}
 
+{{< include ../../topics/_intro-to-er-models.qmd >}} 
+{{< include ../../topics/_entities-and-attributes.qmd >}} 
+{{< include ../../topics/_relationships-and-cardinality.qmd >}} 
+{{< include ../../topics/_keys-and-identifiers.qmd >}} 
 
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
