--- a/topics/_intro-to-er-models.qmd
+++ b/topics/_intro-to-er-models.qmd
@@ -348,7 +348,7 @@ graph ER {
 :::
 ::::
 
-[Link to graphviz on-line editor](https://dreampuf.github.io/GraphvizOnline/)
+[Link to graphviz on-line editor](https://dreampuf.github.io/GraphvizOnline/){target="\_blank"}
 
 
 
@@ -400,7 +400,7 @@ ROOM {
 :::
 ::::
 
-[Link to mermaid live](https://mermaid.live/edit)
+[Link to mermaid live](https://mermaid.live/edit){target="\_blank"}
 
 
 
