--- a/fa2023/lectures/lect05-relational-models.ipynb
+++ b/fa2023/lectures/lect05-relational-models.ipynb
@@ -11,7 +11,7 @@
         "title: Relational models\n",
         "---"
       ],
-      "id": "25c12b88"
+      "id": "e25f6b55"
     },
     {
       "cell_type": "code",
@@ -21,7 +21,7 @@
         "lecture_id = 5\n",
         "n_rows = 8"
       ],
-      "id": "7dd2185c",
+      "id": "b8f88d3f",
       "execution_count": null,
       "outputs": []
     },
@@ -36,7 +36,7 @@
         "\n",
         "<p>&nbsp;</p>\n"
       ],
-      "id": "f4e63ff9"
+      "id": "dd4406b2"
     },
     {
       "cell_type": "code",
@@ -47,7 +47,7 @@
         "# Set the lecture ID and number of rows to show at the top of this file!\n",
         "upcoming_calendar( lecture_id, n_rows )"
       ],
-      "id": "a3279d7f",
+      "id": "eadaa7db",
       "execution_count": null,
       "outputs": []
     },
@@ -762,7 +762,7 @@
         "\n",
         "<p>&nbsp;</p>\n"
       ],
-      "id": "0e4a46f4"
+      "id": "629efcf1"
     },
     {
       "cell_type": "code",
@@ -773,16 +773,16 @@
         "# Set the lecture ID and number of rows to show at the top of this file!\n",
         "upcoming_calendar( lecture_id, n_rows )"
       ],
-      "id": "99e6bbbb",
+      "id": "06a8256d",
       "execution_count": null,
       "outputs": []
     }
   ],
   "metadata": {
     "kernelspec": {
-      "name": "python3",
+      "display_name": "Python 3",
       "language": "python",
-      "display_name": "Python 3 (ipykernel)"
+      "name": "python3"
     }
   },
   "nbformat": 4,
